# AdlerIt

./: .gitignore  Cargo.toml  README.md  quickstart.txt
.cargo/: config.toml
.github/workflows/: ci.yml  defender-smoke-test.yml  release.yml  security-audit.yml
Scripts/: build-windows-gui.ps1  build-windows-installer.ps1  build-windows-portable.ps1  generate-release-notes.sh  version.ps1  version.sh
packaging/windows/: AdlerIt.iss
src/: app.rs  hash.rs  lib.rs  main.rs  theme.rs
src/platform/: win32_app.rs
