[package]
name = "adlerit"
version = "0.2.0"
edition = "2024"
description = "A focused Windows GUI for calculating Adler-32 checksums"
license = "AGPL-3.0-only"
default-run = "adlerit"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["glow"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
